--- a/Bonuses/Cashback/index.html
+++ b/Bonuses/Cashback/index.html
@@ -637,7 +637,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Cashback bonus 10% up to 500€</p>
+                <p class="info">Cashback bonus 10% up to €500</p>
               </div>
 
               <div class="buttons-bonus">
@@ -767,7 +767,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">10% up to 500€ Cashback bonus</p>
+                <p class="info">10% up to €500 Cashback bonus</p>
               </div>
 
               <div class="buttons-bonus">
