--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -715,7 +715,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit: 1€</li>
+                  <li>Minimum Deposit: €1</li>
                   <li>Wagering: x30</li>
                 </ul>
               </div>
@@ -1554,7 +1554,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">First deposit bonus 100% up to 100€</p>
+                <p class="info">First deposit bonus 100% up to €100</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1686,7 +1686,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  100% up to 500€ + 200 Free Spins +1 Bonus Crab
+                  100% up to €500 + 200 Free Spins +1 Bonus Crab
                 </p>
               </div>
 
