--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -1715,7 +1715,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">100% up to 2,000 €</p>
+                <p class="info">100% up to €2,000</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1802,7 +1802,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit: 1€</li>
+                  <li>Minimum Deposit: €1</li>
                   <li>Wagering: x30</li>
                 </ul>
               </div>
@@ -1843,7 +1843,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 3000€ +900 Free Spins</p>
+                <p class="info">Welcome bonus up to €3000 +900 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2237,7 +2237,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome bonus up to 500€ + 200Fs +1 bonus crab
+                  Welcome bonus up to €500 + 200Fs +1 bonus crab
                 </p>
               </div>
 
@@ -3541,7 +3541,7 @@
             <a href="https://ggbetpro.com/l/66c441bc84bb190bc0013f57"
               ><em>GG.Bet:</em></a
             >
-            Offers a Welcome bonus up to 4,500€ +275 free spins.
+            Offers a Welcome bonus up to €4,500 +275 free spins.
           </li>
 
           <li>
