--- a/Esports/index.html
+++ b/Esports/index.html
@@ -694,7 +694,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome Bonus up to 1000€ + 250€ Freebets</p>
+                    <p>Welcome Bonus up to €1000 + €250 Free Bets</p>
                   </div>
 
                   <div class="top-bonus">
@@ -969,7 +969,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">100% up to 600€</p>
+                <p class="info">100% up to €600</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1061,7 +1061,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit: 1€</li>
+                  <li>Minimum Deposit: €1</li>
                   <li>Wagering: x30</li>
                 </ul>
               </div>
@@ -1305,7 +1305,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus up to 1000€ +250€ Freebets</p>
+                <p class="info">Welcome Bonus up to €1000 + €250 Free Bets</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2219,7 +2219,7 @@
                   href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
                   ><em>Loot.Bet:</em></a
                 >
-                Provides First deposit bonus 100% up to 1000€ + 100€ Free bet.
+                Provides First deposit bonus 100% up to €1000 + €100 Free bet.
               </li>
 
               <li>
