--- a/News-Articles/BetFury-Halloween-Dynamic-Drops-Tournament/index.html
+++ b/News-Articles/BetFury-Halloween-Dynamic-Drops-Tournament/index.html
@@ -33,7 +33,7 @@
 
     <title>
       BetFury Tournament - Halloween Dynamic Drops . Win Big This Spooky Season!
-      20,000€ Up For Grabs
+      €20,000 Up For Grabs
     </title>
 
     <script type="application/ld+json">
