--- a/Reviews-page/GG.Bet/index.html
+++ b/Reviews-page/GG.Bet/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Read our honest review of GG.Bet Casino, the leading platform for online sports and esports betting in 2025. Discover top features, WB up to 3000€ +900 Free Spins and 250€ Freebets and more!!"
+      content="Read our honest review of GG.Bet Casino, the leading platform for online sports and esports betting in 2025. Discover top features, WB up to €3000 + 900 Free Spins and €250 Freebets and more!!"
     />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
@@ -30,7 +30,7 @@
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
     <title>
-      GG.Bet Casino Review 2025: WB up to 3000€ +900 Free Spins and 250€
+      GG.Bet Casino Review 2025: WB up to €3000 +900 Free Spins and €250
       Freebets and more!
     </title>
     <!-- breadcrumbs -->
@@ -325,7 +325,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Bonus up to 3000€ +900 Free Spins</p>
+                <p>Bonus up to €3000 +900 Free Spins</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -348,7 +348,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">ESports bonus</p>
-                <p>Welcome bonus up to 1000€ +250€ Freebets</p>
+                <p>Welcome bonus up to €1000 + €250 Freebets</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -402,7 +402,7 @@
         <h3>1. Sports & Esports Welcome Bonus</h3>
         <p>
           New sports and Esports bettors are in for a treat with a massive
-          Welcome bonus up to 1000€ + 250€ Freebets on their first five
+          Welcome bonus up to €1000 + €250 Free Bets on their first five
           deposits! Here's the breakdown:
         </p>
         <h3>🎯 Get More with Your 1st Deposit!</h3>
@@ -480,7 +480,7 @@
         <h3>2. Casino Welcome Bonus</h3>
         <p>
           New casino players can enjoy a
-          <strong>welcome bonus of up to 3,000€ + 900 free spins</strong>
+          <strong>welcome bonus of up to €3,000 + 900 free spins</strong>
           spread over seven deposits. The details are as follows:
         </p>
         <div class="review-img">
@@ -756,7 +756,7 @@
             <h3>1. Sports & Esports Welcome Bonus</h3>
             <p>
               New sports and Esports bettors are in for a treat with a massive
-              Welcome bonus up to 1000€ + 250€ Freebets on their first five
+              Welcome bonus up to €1000 + €250 Freebets on their first five
               deposits! Here's the breakdown:
             </p>
             <h3>🎯 Get More with Your 1st Deposit!</h3>
@@ -834,7 +834,7 @@
             <h3>2. Casino Welcome Bonus</h3>
             <p>
               New casino players can enjoy a
-              <strong>welcome bonus of up to 3,000€ + 900 free spins</strong>
+              <strong>welcome bonus of up to €3,000 + 900 free spins</strong>
               spread over seven deposits. The details are as follows:
             </p>
             <div class="review-img">
