--- a/Reviews-page/Rabona/index.html
+++ b/Reviews-page/Rabona/index.html
@@ -29,7 +29,8 @@
     />
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
     <title>
-      Rabona Casino Review 2025: WB 500€ + 200Fs +1 bonus crab and more!
+      Rabona Casino Review 2025: WB €500 + 200 Free Spins +1 bonus crab and
+      more!
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
@@ -834,7 +835,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>First deposit bonus 100% up to 100€</p>
+                <p>First deposit bonus 100% up to €100</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
