--- a/Reviews-page/TrustDice/index.html
+++ b/Reviews-page/TrustDice/index.html
@@ -323,7 +323,7 @@
           </div>
           <div class="overview-button">
             <p>Withdrawal Limit</p>
-            <p>25,000€ per week</p>
+            <p>€25,000 per week</p>
           </div>
 
           <div class="overview-button" id="card-tipe-container">
