--- a/Reviews-page/Wazamba/index.html
+++ b/Reviews-page/Wazamba/index.html
@@ -813,7 +813,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>First deposit 100% up to 100€</p>
+                <p>First deposit 100% up to €100</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
