--- a/Sports/index.html
+++ b/Sports/index.html
@@ -1331,7 +1331,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">100% up to 600€</p>
+                <p class="info">100% up to €600</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1423,7 +1423,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit: 1€</li>
+                  <li>Minimum Deposit: €1</li>
                   <li>Wagering: x30</li>
                 </ul>
               </div>
@@ -1467,7 +1467,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus up to 1000€ +250€ Freebets</p>
+                <p class="info">Welcome Bonus up to €1000 + €250 Free Bets</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2158,7 +2158,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">First deposit bonus 100% up to 100€</p>
+                <p class="info">First deposit bonus 100% up to €100</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2294,7 +2294,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">First deposit 100% up to 100€</p>
+                <p class="info">First deposit 100% up to €100</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2734,7 +2734,7 @@
                   href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
                   ><em>Loot.Bet:</em></a
                 >
-                Provides First deposit bonus 100% up to 1000€ + 100€ Free bet.
+                Provides First deposit bonus 100% up to €1000 + €100 Free Bet.
               </li>
 
               <li>
