--- a/index.html
+++ b/index.html
@@ -1555,7 +1555,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit: 1€</li>
+                  <li>Minimum Deposit: €1</li>
                   <li>Wagering: x30</li>
                 </ul>
               </div>
@@ -1598,7 +1598,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 3000€ +900Free Spins</p>
+                <p class="info">Welcome bonus up to €3000 +900Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2256,7 +2256,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome bonus up to 500€ + 200Fs +1 bonus crab
+                  Welcome bonus up to €500 + 200Fs +1 bonus crab
                 </p>
               </div>
 
