--- a/Reviews-page/Thunderpick/index.html
+++ b/Reviews-page/Thunderpick/index.html
@@ -324,7 +324,7 @@
           </div>
           <div class="overview-button">
             <p>Withdrawal Limit</p>
-            <p>25,000€ per week</p>
+            <p>€25,000 per week</p>
           </div>
 
           <div class="overview-button" id="card-tipe-container">
@@ -594,7 +594,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>100% up to 2,000€</p>
+                <p>100% up to €2,000</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -620,7 +620,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">ESports bonus</p>
-                <p>100% up to 600€</p>
+                <p>100% up to €600</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -645,7 +645,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>100% up to 600€</p>
+                <p>100% up to €600</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
