--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -289,7 +289,7 @@
                 </div>
 
                 <div class="content-top">
-                  <p>Bonus up to 4500 € +275 Free spins</p>
+                  <p>Bonus up to 4500 € +275 Free Spins</p>
                 </div>
 
                 <div class="top-bonus">
@@ -306,7 +306,7 @@
                 </div>
 
                 <div class="content-top">
-                  <p>Welcome bonus up to 590% + 225 free spins</p>
+                  <p>Welcome bonus up to 590% + 225 Free Spins</p>
                 </div>
 
                 <div class="top-bonus">
@@ -323,7 +323,7 @@
                 </div>
 
                 <div class="content-top">
-                  <p>Welcome bonuses 350% + 200 free spins</p>
+                  <p>Welcome bonuses 350% + 200 Free Spins</p>
                 </div>
 
                 <div class="top-bonus">
@@ -367,7 +367,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 590% + 225 free spins</p>
+                <p class="info">Welcome bonus up to 590% + 225 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -498,7 +498,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses 350% + 200 free spins</p>
+                <p class="info">Welcome bonuses 350% + 200 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -759,7 +759,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Bonus up to 3000 € +900 Free spins</p>
+                <p class="info">Bonus up to 3000 € +900 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
