--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -1255,7 +1255,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome bonus up to 590% + 225 free spins</p>
+                    <p>Welcome bonus up to 590% + 225 Free Spins</p>
                   </div>
 
                   <div class="top-bonus">
@@ -1272,7 +1272,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome bonuses 350% + 200 free spins</p>
+                    <p>Welcome bonuses 350% + 200 Free Spins</p>
                   </div>
 
                   <div class="top-bonus">
@@ -1458,7 +1458,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 590% + 225 free spins</p>
+                <p class="info">Welcome bonus up to 590% + 225 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1587,7 +1587,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses 350% + 200 free spins</p>
+                <p class="info">Welcome bonuses 350% + 200 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2108,7 +2108,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome Bonus 325% up to $10800 + 250 Free spins
+                  Welcome Bonus 325% up to $10800 + 250 Free Spins
                 </p>
               </div>
 
