--- a/Reviews-page/Wild.io/index.html
+++ b/Reviews-page/Wild.io/index.html
@@ -522,7 +522,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Welcome bonuses 350% + 200 free spins</p>
+                <p>Welcome bonuses 350% + 200 Free Spins</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
