--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome bonus up to 590% + 225 free spins</p>
+                    <p>Welcome bonus up to 590% + 225 Free Spins</p>
                   </div>
 
                   <div class="top-bonus">
@@ -1019,7 +1019,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome bonuses 350% + 200 free spins</p>
+                    <p>Welcome bonuses 350% + 200 fFree Spins</p>
                   </div>
 
                   <div class="top-bonus">
@@ -1207,7 +1207,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 590% + 225 free spins</p>
+                <p class="info">Welcome bonus up to 590% + 225 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1336,7 +1336,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses 350% + 200 free spins</p>
+                <p class="info">Welcome bonuses 350% + 200 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2516,7 +2516,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome Bonus 325% up to $10800 + 250 Free spins
+                  Welcome Bonus 325% up to $10800 + 250 Free Spins
                 </p>
               </div>
 
