--- a/Bonuses/Cashback/index.html
+++ b/Bonuses/Cashback/index.html
@@ -334,7 +334,7 @@
                   <img src="/img/vave-logo.webp" alt="Vave logo" />
                 </div>
                 <div class="content-top">
-                  <p>Welcome bonus cashback 100% up to 1 BTC</p>
+                  <p>Cashback bonus 100% up to 1 BTC</p>
                 </div>
 
                 <div class="top-bonus">
@@ -379,7 +379,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Cashback & rakeback up to 50%</p>
+                <p class="info">Cashback & Rakeback bonus up to 50%</p>
               </div>
 
               <div class="buttons-bonus">
@@ -509,7 +509,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus cashback 100% up to 1 BTC</p>
+                <p class="info">Cashback bonus 100% up to 1 BTC</p>
               </div>
 
               <div class="buttons-bonus">
@@ -767,7 +767,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">10% up to €500 Cashback bonus</p>
+                <p class="info">Cashback bonus 10% up to €500</p>
               </div>
 
               <div class="buttons-bonus">
@@ -897,7 +897,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">20% weekly Cashback</p>
+                <p class="info">Cashback bonus 20% weekly</p>
               </div>
 
               <div class="buttons-bonus">
