--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -759,7 +759,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Bonus up to 3000 € +900 Free Spins</p>
+                <p class="info">Welcome bonus up to 3000 € +900 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1939,7 +1939,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome Bonus 325% up to 5 BTC + 200 Free Spins
+                  Welcome bonus 325% up to 5 BTC + 200 Free Spins
                 </p>
               </div>
 
