--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -2108,7 +2108,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome Bonus 325% up to $10800 + 250 Free Spins
+                  Welcome bonus 325% up to $10800 + 250 Free Spins
                 </p>
               </div>
 
@@ -2760,7 +2760,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome Bonus 325% up to 5 BTC + 200 Free Spins
+                  Welcome bonus 325% up to 5 BTC + 200 Free Spins
                 </p>
               </div>
 
@@ -2889,7 +2889,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 100% up to 5 BTC</p>
+                <p class="info">Welcome bonus 100% up to 5 BTC</p>
               </div>
 
               <div class="buttons-bonus">
@@ -3546,7 +3546,7 @@
 
           <li>
             <a href="https://7bit.partners/p2004e5c0"><em>7Bit Casino:</em></a>
-            Offers a Welcome Bonus 325% up to 10800 CAD + 250 free spins.
+            Offers a Welcome bonus 325% up to 10800 CAD + 250 free spins.
           </li>
 
           <li>
