--- a/Esports/index.html
+++ b/Esports/index.html
@@ -694,7 +694,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome Bonus up to €1000 + €250 Free Bets</p>
+                    <p>Welcome bonus up to €1000 + €250 Free Bets</p>
                   </div>
 
                   <div class="top-bonus">
@@ -969,7 +969,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">100% up to €600</p>
+                <p class="info">Welcome bonus 100% up to €600</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1135,9 +1135,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">
-                  First deposit 100% bonus up to $200 in free bets
-                </p>
+                <p class="info">Welcome bonus 100% up to $200 in free bets</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1305,7 +1303,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus up to €1000 + €250 Free Bets</p>
+                <p class="info">Welcome bonus up to €1000 + €250 Free Bets</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1615,7 +1613,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 100% up to 5 BTC</p>
+                <p class="info">Welcome bonus 100% up to 5 BTC</p>
               </div>
 
               <div class="buttons-bonus">
