--- a/Reviews-page/BetFury/index.html
+++ b/Reviews-page/BetFury/index.html
@@ -373,7 +373,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>Cashback & rakeback up to 50%</p>
+                <p>Cashback & Rakeback bonus up to 50%</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
