--- a/Reviews-page/CloudBet/index.html
+++ b/Reviews-page/CloudBet/index.html
@@ -334,7 +334,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Welcome Bonus 100% up to 5 BTC</p>
+                <p>Welcome bonus 100% up to 5 BTC</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -360,7 +360,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">ESports bonus</p>
-                <p>Welcome Bonus 100% up to 5 BTC</p>
+                <p>Welcome bonus 100% up to 5 BTC</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -386,7 +386,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>Welcome Bonus 100% up to 5 BTC</p>
+                <p>Welcome bonus 100% up to 5 BTC</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
