--- a/Reviews-page/Thunderpick/index.html
+++ b/Reviews-page/Thunderpick/index.html
@@ -620,7 +620,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">ESports bonus</p>
-                <p>100% up to €600</p>
+                <p>Welcome bonus 100% up to €600</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -645,7 +645,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>100% up to €600</p>
+                <p>Welcome bonus 100% up to €600</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
