--- a/Sports/index.html
+++ b/Sports/index.html
@@ -845,7 +845,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Cashback & rakeback up to 50%</p>
+                    <p>Cashback & Rakeback bonus up to 50%</p>
                   </div>
 
                   <div class="top-bonus">
@@ -862,7 +862,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>First deposit 100% bonus up to $200 in free bets</p>
+                    <p>Welcome bonus 100% up to $200 in free bets</p>
                   </div>
 
                   <div class="top-bonus">
@@ -1056,7 +1056,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Cashback & rakeback up to 50%</p>
+                <p class="info">Cashback & Rakeback bonus up to 50%</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1192,9 +1192,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">
-                  First deposit 100% bonus up to $200 in free bets
-                </p>
+                <p class="info">Welcome bonus 100% up to $200 in free bets</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1331,7 +1329,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">100% up to €600</p>
+                <p class="info">Welcome bonus 100% up to €600</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1467,7 +1465,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus up to €1000 + €250 Free Bets</p>
+                <p class="info">Welcome bonus up to €1000 + €250 Free Bets</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2016,7 +2014,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 100% up to 5 BTC</p>
+                <p class="info">Welcome bonus 100% up to 5 BTC</p>
               </div>
 
               <div class="buttons-bonus">
