--- a/index.html
+++ b/index.html
@@ -2121,7 +2121,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 100% up to 5 BTC</p>
+                <p class="info">Welcome bonus 100% up to 5 BTC</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2516,7 +2516,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome Bonus 325% up to $10800 + 250 Free Spins
+                  Welcome bonus 325% up to $10800 + 250 Free Spins
                 </p>
               </div>
 
@@ -2653,7 +2653,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  Welcome Bonus 325% up to 5 BTC + 200 Free Spins
+                  Welcome bonus 325% up to 5 BTC + 200 Free Spins
                 </p>
               </div>
 
