--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -1715,7 +1715,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">100% up to €2,000</p>
+                <p class="info">Welcome bonus 100% up to €2,000</p>
               </div>
 
               <div class="buttons-bonus">
