--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome bonuses 350% + 200 fFree Spins</p>
+                    <p>Welcome bonuses 350% + 200 Free Spins</p>
                   </div>
 
                   <div class="top-bonus">
