--- a/Sports/index.html
+++ b/Sports/index.html
@@ -551,28 +551,25 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
-
-                <!-- roobet september 2025-->
+                <!-- roobet holoween sports 2025-->
                 <div class="news-item">
                   <a
-                    href="/News-Articles/September_at_Roobet_Spin_Bet_Win_Repeat/"
+                    href="/News-Articles/Roobet-Halloween-Sportsbook-Bonuses-2025/"
                   >
                     <div class="news-banner">
                       <img
-                        src="/img/news-banners/september_at_roobet_2025_news.webp"
+                        src="/img/news-banners/Roobet-Halloween-2025-news.webp"
                         width="300"
                         height="200"
-                        alt="roobet september 2025"
+                        alt="roobet holloween 2025"
                         loading="lazy"
                       />
                     </div>
                     <div class="news-content">
                       <h2>
-                        September at Roobet: Spin, Bet, Win, Repeat <br />
-
-                        <strong>
-                          Offer expires on 30th of September 2025</strong
-                        >
+                        Free Bet offers on the NBA, Premier League, NFL, and
+                        tennis. <br />
+                        <strong>Offer expires on 2nd od November 2025</strong>
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
