--- a/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/index.html
+++ b/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
       rel="canonical"
-      href="https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/"
+      href="https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/"
     />
 
     <link rel="stylesheet" href="/newx-demoGames.css" />
