--- a/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/index.html
+++ b/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "BGaming Drops Frenzy Fest at Duelbits – Win Your Share of $150,000 in Random Drops",
-            "item": "https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/"
+            "item": "https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/"
           }
         ]
       }
@@ -70,10 +70,10 @@
         "name": "BGaming Drops Frenzy Fest at Duelbits",
         "description": "Join Duelbits' BGaming Drops Frenzy Fest and win your share of a $150,000 prize pool! Play any eligible BGaming slot from March 1 to December 31, 2025, and every spin could trigger a random cash prize.",
         "image": "https://www.all4wins.com/img/news-banners/duelbits-drops-2025-banner.webp",
-        "url": "https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/",
+        "url": "https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/",
         "offers": {
           "@type": "Offer",
-          "url": "https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/",
+          "url": "https://www.all4wins.com/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/",
           "price": "0.00",
           "priceCurrency": "USD",
           "availability": "https://schema.org/InStock",
