--- a/index.html
+++ b/index.html
@@ -319,6 +319,30 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!-- Only at Roobet - 100 Thieves-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Roobet-100-Thieves-The-Ultimate-Esports-Partnership/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/Roobet-100Thieves-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Roobet x 100 Thieves: The Ultimate Esports Partnership
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!-- mission uncrossable -->
                 <div class="news-item">
