--- a/Reviews-page/Roobet/Games/index.html
+++ b/Reviews-page/Roobet/Games/index.html
@@ -569,6 +569,32 @@
           combination of competitive pricing and breadth of markets makes it a
           good all-rounder for eSports wagering.
         </p>
+        <h3>Roobet x 100 Thieves Esports Partnership</h3>
+
+        <p>
+          Roobet has teamed up with Matthew “Nadeshot” Haag and the legendary
+          esports organization 100 Thieves to create an exciting collaboration
+          for crypto casino and esports fans. This partnership marks 100
+          Thieves’ return to Counter-Strike 2, now competing under the banner
+          100 Thieves Roobet, and includes a new competitive hub in Europe to
+          support their comeback.
+        </p>
+
+        <p>
+          The collaboration brings exclusive benefits for Roobet players,
+          including special esports promotions, free bet offers during major
+          Counter-Strike tournaments, and limited-time rewards through Roobet’s
+          loyalty program. Fans can enjoy a front-row experience of one of the
+          most innovative esports and crypto gaming partnerships in recent
+          years.
+        </p>
+
+        <p>
+          Beyond promotions, this long-term partnership combines esports, crypto
+          gaming, and digital entertainment, offering interactive experiences
+          and exclusive content for fans while enhancing the overall Roobet
+          ecosystem.
+        </p>
 
         <h2>Limits, Bankroll & Responsible Play</h2>
 
